Add pruning module

--- a/pruning_test.ipynb
+++ b/pruning_test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,99 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "_NAME ['SGFN', 'Mmgnet']\n",
-      "MODEL_PATH /home/knuvi/hojun/CVPR2023-VLSAT/src/model/model.py\n",
-      "NAME Mmgnet\n",
-      "PATH ./config\n",
-      "multi_view_root /home/knuvi/hojun/CVPR2023-VLSAT/\n",
-      "VERBOSE False\n",
-      "SEED 2020\n",
-      "MAX_EPOCHES 60\n",
-      "LR 0.0001\n",
-      "W_DECAY False\n",
-      "AMSGRAD False\n",
-      "LR_SCHEDULE Cosine\n",
-      "GPU [0]\n",
-      "SAVE_INTERVAL 2000\n",
-      "VALID_INTERVAL 10\n",
-      "LOG_INTERVAL 100\n",
-      "LOG_IMG_INTERVAL 100\n",
-      "WORKERS 0\n",
-      "Batch_Size 16\n",
-      "update_2d False\n",
-      "EVAL False\n",
-      "_EDGE_BUILD_TYPE ['FC', 'KNN']\n",
-      "EDGE_BUILD_TYPE KNN\n",
-      "WEIGHTING True\n",
-      "dict:MODEL\n",
-      "  N_LAYERS 2\n",
-      "  USE_SPATIAL True\n",
-      "  WITH_BN False\n",
-      "  USE_GCN True\n",
-      "  USE_RGB False\n",
-      "  USE_NORMAL False\n",
-      "  use_2d_feats True\n",
-      "  USE_CONTEXT True\n",
-      "  USE_GCN_EDGE True\n",
-      "  USE_REL_LOSS True\n",
-      "  OBJ_PRED_FROM_GCN True\n",
-      "  _GCN_TYPE ['TRIP', 'EAN']\n",
-      "  GCN_TYPE EAN\n",
-      "  _ATTENTION ['fat']\n",
-      "  ATTENTION fat\n",
-      "  DROP_OUT_ATTEN 0.5\n",
-      "  multi_rel_outputs True\n",
-      "  feature_transform False\n",
-      "  point_feature_size 512\n",
-      "  edge_feature_size 256\n",
-      "  clip_feat_dim 512\n",
-      "  lambda_o 0.1\n",
-      "  DIM_ATTEN 256\n",
-      "  _WEIGHT_EDGE ['BG', 'DYNAMIC', 'OCCU', 'NONE']\n",
-      "  WEIGHT_EDGE DYNAMIC\n",
-      "  OBJ_EDGE NONE\n",
-      "  _GCN_AGGR ['add', 'mean', 'max']\n",
-      "  GCN_AGGR max\n",
-      "  w_bg 1.0\n",
-      "  NONE_RATIO 1.0\n",
-      "  NUM_HEADS 8\n",
-      "  use_pretrain \n",
-      "  use_descriptor True\n",
-      "  obj_label_path /home/knuvi/hojun/CVPR2023-VLSAT/data/3DSSG_subset/classes.txt\n",
-      "  rel_label_path /home/knuvi/hojun/CVPR2023-VLSAT/data/3DSSG_subset/relations.txt\n",
-      "  adapter_path /home/knuvi/hojun/CVPR2023-VLSAT/clip_adapter/checkpoint/origin_mean.pth\n",
-      "dict:dataset\n",
-      "  root /home/knuvi/hojun/CVPR2023-VLSAT/data/3DSSG_subset\n",
-      "  selection \n",
-      "  use_data_augmentation False\n",
-      "  ignore_scannet_rel True\n",
-      "  is_v2 True\n",
-      "  _label_file ['labels.instances.align.annotated.v2.ply', 'inseg.ply', 'cvvseg.ply']\n",
-      "  label_file labels.instances.align.annotated.v2.ply\n",
-      "  data_augmentation False\n",
-      "  num_points 128\n",
-      "  num_points_union 256\n",
-      "  disable_support_rel False\n",
-      "  with_bbox False\n",
-      "  discard_some False\n",
-      "  load_cache False\n",
-      "  sample_in_runtime True\n",
-      "  sample_num_nn 2\n",
-      "  sample_num_seed 4\n",
-      "  class_choice []\n",
-      "  max_edges -1\n",
-      "  drop_edge 0.5\n",
-      "  drop_edge_eval 0.0\n",
-      "  use_object_weight False\n",
-      "DEVICE cuda\n",
-      "\n",
       "=== 160 classes ===\n",
       "| 0             armchair:0.006|| 1             backpack:0.019|\n",
       "| 2                  bag:0.005|| 3                 ball:0.143|\n",
@@ -341,10 +255,10 @@
     {
      "data": {
       "text/plain": [
-       "<src.model.model.MMGNet at 0x7fe7c653aeb0>"
+       "<src.model.model.MMGNet at 0x7fe794dd5400>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,6 +273,231 @@
     "\n",
     "model = MMGNet(config)\n",
     "model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MMG_student(\n",
+       "  (self_attn): ModuleList(\n",
+       "    (0): MultiHeadAttention(\n",
+       "      (attention): ScaledDotProductAttention(\n",
+       "        (fc_q): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        (fc_k): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        (fc_v): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        (fc_o): Linear(in_features=512, out_features=512, bias=True)\n",
+       "      )\n",
+       "      (dropout): Dropout(p=0.1, inplace=False)\n",
+       "      (layer_norm): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (cross_attn): ModuleList(\n",
+       "    (0): MultiHeadAttention(\n",
+       "      (attention): ScaledDotProductAttention(\n",
+       "        (fc_q): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        (fc_k): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        (fc_v): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        (fc_o): Linear(in_features=512, out_features=512, bias=True)\n",
+       "      )\n",
+       "      (dropout): Dropout(p=0.1, inplace=False)\n",
+       "      (layer_norm): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (cross_attn_rel): ModuleList(\n",
+       "    (0): MultiHeadAttention(\n",
+       "      (attention): ScaledDotProductAttention(\n",
+       "        (fc_q): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        (fc_k): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        (fc_v): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        (fc_o): Linear(in_features=512, out_features=512, bias=True)\n",
+       "      )\n",
+       "      (dropout): Dropout(p=0.1, inplace=False)\n",
+       "      (layer_norm): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (gcn_2ds): ModuleList(\n",
+       "    (0): GraphEdgeAttenNetwork_student(\n",
+       "      (index_get): Gen_Index()\n",
+       "      (index_aggr): Aggre_Index()\n",
+       "      (edgeatten): MultiHeadedEdgeAttention_student(\n",
+       "        (nn_edge): Sequential(\n",
+       "          (0): Linear(in_features=1536, out_features=512, bias=True)\n",
+       "        )\n",
+       "        (nn): mySequential(\n",
+       "          (0): Conv1d(128, 128, kernel_size=(1,), stride=(1,))\n",
+       "          (1): ReLU()\n",
+       "          (2): Dropout(p=0.5, inplace=False)\n",
+       "          (3): Conv1d(128, 32, kernel_size=(1,), stride=(1,))\n",
+       "        )\n",
+       "        (proj_edge): Sequential(\n",
+       "          (0): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        )\n",
+       "        (proj_query): Sequential(\n",
+       "          (0): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        )\n",
+       "        (proj_value): Sequential(\n",
+       "          (0): Linear(in_features=512, out_features=256, bias=True)\n",
+       "        )\n",
+       "      )\n",
+       "      (prop): Sequential(\n",
+       "        (0): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        (1): ReLU()\n",
+       "        (2): Linear(in_features=768, out_features=512, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (gcn_3ds): ModuleList(\n",
+       "    (0): GraphEdgeAttenNetwork_student(\n",
+       "      (index_get): Gen_Index()\n",
+       "      (index_aggr): Aggre_Index()\n",
+       "      (edgeatten): MultiHeadedEdgeAttention_student(\n",
+       "        (nn_edge): Sequential(\n",
+       "          (0): Linear(in_features=1536, out_features=512, bias=True)\n",
+       "        )\n",
+       "        (nn): mySequential(\n",
+       "          (0): Conv1d(128, 128, kernel_size=(1,), stride=(1,))\n",
+       "          (1): ReLU()\n",
+       "          (2): Dropout(p=0.5, inplace=False)\n",
+       "          (3): Conv1d(128, 32, kernel_size=(1,), stride=(1,))\n",
+       "        )\n",
+       "        (proj_edge): Sequential(\n",
+       "          (0): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        )\n",
+       "        (proj_query): Sequential(\n",
+       "          (0): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        )\n",
+       "        (proj_value): Sequential(\n",
+       "          (0): Linear(in_features=512, out_features=256, bias=True)\n",
+       "        )\n",
+       "      )\n",
+       "      (prop): Sequential(\n",
+       "        (0): Linear(in_features=768, out_features=768, bias=True)\n",
+       "        (1): ReLU()\n",
+       "        (2): Linear(in_features=768, out_features=512, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (self_attn_fc): Sequential(\n",
+       "    (0): Linear(in_features=4, out_features=32, bias=True)\n",
+       "    (1): ReLU()\n",
+       "    (2): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
+       "    (3): Linear(in_features=32, out_features=8, bias=True)\n",
+       "  )\n",
+       "  (drop_out): Dropout(p=0.5, inplace=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.model.mmg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PointNetfeat(\n",
+       "  (relu): ReLU()\n",
+       "  (conv1): Conv1d(3, 64, kernel_size=(1,), stride=(1,))\n",
+       "  (conv2): Conv1d(64, 128, kernel_size=(1,), stride=(1,))\n",
+       "  (conv3): Conv1d(128, 768, kernel_size=(1,), stride=(1,))\n",
+       ")"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.model.obj_encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ModuleList(\n",
+       "  (0): MultiHeadAttention(\n",
+       "    (attention): ScaledDotProductAttention(\n",
+       "      (fc_q): Linear(in_features=512, out_features=512, bias=True)\n",
+       "      (fc_k): Linear(in_features=512, out_features=512, bias=True)\n",
+       "      (fc_v): Linear(in_features=512, out_features=512, bias=True)\n",
+       "      (fc_o): Linear(in_features=512, out_features=512, bias=True)\n",
+       "    )\n",
+       "    (dropout): Dropout(p=0.1, inplace=False)\n",
+       "    (layer_norm): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.model.mmg.self_attn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch_pruning as tp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Head #0\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'MMG_student' object has no attribute 'head_dim'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m model\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mmmg\u001b[38;5;241m.\u001b[39mmodules():\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHead #\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m%\u001b[39mhead_id)\n\u001b[0;32m----> 4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[Before Pruning] Num Heads: \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m, Head Dim: \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m =>\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m%\u001b[39m(m\u001b[38;5;241m.\u001b[39mnum_heads, \u001b[43mm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhead_dim\u001b[49m))\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m      6\u001b[0m     head_id\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n",
+      "File \u001b[0;32m~/anaconda3/envs/vlsat/lib/python3.8/site-packages/torch/nn/modules/module.py:1207\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1205\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m modules:\n\u001b[1;32m   1206\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1207\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m   1208\u001b[0m     \u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m, name))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'MMG_student' object has no attribute 'head_dim'"
+     ]
+    }
+   ],
+   "source": [
+    "head_id = 0\n",
+    "for m in model.model.mmg.modules():\n",
+    "    print(\"Head #%d\"%head_id)\n",
+    "    print(\"[Before Pruning] Num Heads: %d, Head Dim: %d =>\"%(m.num_heads, m.head_dim))\n",
+    "    print()\n",
+    "    head_id+=1"
    ]
   },
   {
