--- a/pruning_test.ipynb
+++ b/pruning_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,13 @@
     "from utils import util\n",
     "import torch\n",
     "import argparse\n",
-    "import torch.nn.utils.prune as prune"
+    "import torch.nn.utils.prune as prune\n",
+    "from torchinfo import summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,24 +33,23 @@
     "    # load config file\n",
     "    config = Config(\"./config/mmgnet.json\")\n",
     "    #print(config)\n",
-    "    config.LOADBEST = ''\n",
     "    config.MODE = 'train'\n",
     "    config.exp = 'test'\n",
-    "    config.NAME = 'sgfn'\n",
+    "    config.NAME = 'sgpn'\n",
     "    \n",
     "    return config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model name : sgfn\n",
+      "model name : sgpn\n",
       "=== 160 classes ===\n",
       "| 0             armchair:0.006|| 1             backpack:0.019|\n",
       "| 2                  bag:0.005|| 3                 ball:0.143|\n",
@@ -245,20 +245,19 @@
       "|22          standing in 0.038||23                cover 0.053|\n",
       "|24             lying in 0.027||25           hanging in 0.500|\n",
       "\n",
-      "num of data: 548\n"
+      "num of data: 548\n",
+      "self.model_name:  sgpn\n"
      ]
     },
     {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[56], line 8\u001b[0m\n\u001b[1;32m      3\u001b[0m util\u001b[38;5;241m.\u001b[39mset_random_seed(config\u001b[38;5;241m.\u001b[39mSEED)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# if config.VERBOSE:\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#     print(config)\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mMMGNet\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m model\n",
-      "File \u001b[0;32m~/git/VLSAT_pruning/src/model/model.py:95\u001b[0m, in \u001b[0;36mMMGNet.__init__\u001b[0;34m(self, config)\u001b[0m\n\u001b[1;32m     93\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel \u001b[38;5;241m=\u001b[39m SGPN(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig, num_obj_class, num_rel_class)\u001b[38;5;241m.\u001b[39mto(config\u001b[38;5;241m.\u001b[39mDEVICE)\n\u001b[1;32m     94\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 95\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m\n\u001b[1;32m     97\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msamples_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(config\u001b[38;5;241m.\u001b[39mPATH, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_name, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexp,  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msamples\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     98\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mresults_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(config\u001b[38;5;241m.\u001b[39mPATH, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel_name, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexp, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresults\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "<src.model.model.MMGNet at 0x7f4245973e50>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -275,52 +274,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "GraphEdgeAttenNetwork(\n",
-       "  (index_get): Gen_Index()\n",
-       "  (index_aggr): Aggre_Index()\n",
-       "  (edgeatten): MultiHeadedEdgeAttention(\n",
-       "    (nn_edge): Sequential(\n",
-       "      (0): Linear(in_features=1280, out_features=768, bias=True)\n",
-       "      (1): ReLU()\n",
-       "      (2): Linear(in_features=768, out_features=256, bias=True)\n",
-       "    )\n",
-       "    (nn): mySequential(\n",
-       "      (0): Conv1d(96, 96, kernel_size=(1,), stride=(1,))\n",
-       "      (1): ReLU()\n",
-       "      (2): Dropout(p=0.5, inplace=False)\n",
-       "      (3): Conv1d(96, 32, kernel_size=(1,), stride=(1,))\n",
-       "    )\n",
-       "    (proj_edge): Sequential(\n",
-       "      (0): Linear(in_features=256, out_features=256, bias=True)\n",
-       "    )\n",
-       "    (proj_query): Sequential(\n",
-       "      (0): Linear(in_features=512, out_features=512, bias=True)\n",
-       "    )\n",
-       "    (proj_value): Sequential(\n",
-       "      (0): Linear(in_features=512, out_features=256, bias=True)\n",
-       "    )\n",
-       "  )\n",
-       "  (prop): Sequential(\n",
-       "    (0): Linear(in_features=768, out_features=768, bias=True)\n",
-       "    (1): ReLU()\n",
-       "    (2): Linear(in_features=768, out_features=512, bias=True)\n",
-       "  )\n",
-       ")"
+       "Conv1d(96, 32, kernel_size=(1,), stride=(1,))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.model.gcn.gconvs[1]"
+    "model.model.gcn.gconvs[0].edgeatten.nn[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PointNetCls(\n",
+       "  (fc1): Linear(in_features=512, out_features=512, bias=True)\n",
+       "  (fc2): Linear(in_features=512, out_features=256, bias=True)\n",
+       "  (fc3): Linear(in_features=256, out_features=160, bias=True)\n",
+       "  (dropout): Dropout(p=0.3, inplace=False)\n",
+       "  (relu): ReLU()\n",
+       ")"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.model.obj_predictor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'MMGNet' object has no attribute 'modules'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m tripletModel \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mgcn\u001b[38;5;241m.\u001b[39mgconvs[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m      2\u001b[0m layers \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodules\u001b[49m():\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(m, torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mLinear):\n\u001b[1;32m      5\u001b[0m         layers\u001b[38;5;241m.\u001b[39mappend(m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'MMGNet' object has no attribute 'modules'"
+     ]
+    }
+   ],
+   "source": [
+    "tripletModel = model.model.gcn.gconvs[0]\n",
+    "layers = []\n",
+    "for m in tripletModel.modules():\n",
+    "    if isinstance(m, torch.nn.Linear):\n",
+    "        layers.append(m)\n",
+    "    elif isinstance(m, torch.nn.modules.conv._ConvNd):\n",
+    "        layers.append(m)\n",
+    "print(layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TripletGCNModel(\n",
+       "  (gconvs): ModuleList(\n",
+       "    (0): TripletGCN()\n",
+       "    (1): TripletGCN()\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.model.gcn"
    ]
   },
   {
