--- a/pruning_test.ipynb
+++ b/pruning_test.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torchinfo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 15\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01margparse\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mprune\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mprune\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchinfo\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m summary\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torchinfo'"
+     ]
+    }
+   ],
    "source": [
     "from genericpath import isfile\n",
     "import json\n",
@@ -19,60 +31,7 @@
     "from utils import util\n",
     "import torch\n",
     "import argparse\n",
-    "import torch.nn.utils.prune as prune\n",
-    "from torchinfo import summary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import glob\n",
-    "\n",
-    "# 디렉토리 경로 설정\n",
-    "directory = 'config/ckp/Mmgnet/origin_t3/'\n",
-    "\n",
-    "# _best.pth 파일들의 목록을 가져오기\n",
-    "best_files = glob.glob(os.path.join(directory, '*_pre.pth'))\n",
-    "print(best_files)\n",
-    "# 파일 이름 변경"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'best_files' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file_path \u001b[38;5;129;01min\u001b[39;00m \u001b[43mbest_files\u001b[49m:\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;66;03m# 새 파일 이름 생성\u001b[39;00m\n\u001b[1;32m      3\u001b[0m     new_file_path \u001b[38;5;241m=\u001b[39m file_path\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_pre.pth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_best.pth\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;66;03m# 파일 이름 변경\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'best_files' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "for file_path in best_files:\n",
-    "    # 새 파일 이름 생성\n",
-    "    new_file_path = file_path.replace('_pre.pth', '_best.pth')\n",
-    "    # 파일 이름 변경\n",
-    "    os.rename(file_path, new_file_path)\n",
-    "    print(f'Renamed: {file_path} -> {new_file_path}')"
+    "import torch.nn.utils.prune as prune"
    ]
   },
   {
@@ -978,7 +937,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
