--- a/pruning_test.ipynb
+++ b/pruning_test.ipynb
@@ -85,41 +85,43 @@
        "    (relu): ReLU()\n",
        "    (conv1): Conv1d(11, 64, kernel_size=(1,), stride=(1,))\n",
        "    (conv2): Conv1d(64, 128, kernel_size=(1,), stride=(1,))\n",
-       "    (conv3): Conv1d(128, 128, kernel_size=(1,), stride=(1,))\n",
+       "    (conv3): Conv1d(128, 256, kernel_size=(1,), stride=(1,))\n",
        "  )\n",
        "  (gcn): GraphEdgeAttenNetworkLayers(\n",
        "    (gconvs): ModuleList(\n",
-       "      (0): GraphEdgeAttenNetwork(\n",
+       "      (0-1): 2 x GraphEdgeAttenNetwork(\n",
        "        (index_get): Gen_Index()\n",
        "        (index_aggr): Aggre_Index()\n",
        "        (edgeatten): MultiHeadedEdgeAttention(\n",
        "          (nn_edge): Sequential(\n",
-       "            (0): Linear(in_features=1152, out_features=128, bias=True)\n",
+       "            (0): Linear(in_features=1280, out_features=256, bias=True)\n",
        "          )\n",
        "          (nn): mySequential(\n",
-       "            (0): Conv1d(80, 80, kernel_size=(1,), stride=(1,))\n",
+       "            (0): Conv1d(96, 96, kernel_size=(1,), stride=(1,))\n",
        "            (1): ReLU()\n",
        "            (2): Dropout(p=0.5, inplace=False)\n",
-       "            (3): Conv1d(80, 16, kernel_size=(1,), stride=(1,))\n",
+       "            (3): Conv1d(96, 32, kernel_size=(1,), stride=(1,))\n",
        "          )\n",
        "          (proj_edge): Sequential(\n",
-       "            (0): Linear(in_features=128, out_features=128, bias=True)\n",
+       "            (0): Linear(in_features=256, out_features=256, bias=True)\n",
        "          )\n",
        "          (proj_query): Sequential(\n",
        "            (0): Linear(in_features=512, out_features=512, bias=True)\n",
        "          )\n",
        "          (proj_value): Sequential(\n",
-       "            (0): Linear(in_features=512, out_features=128, bias=True)\n",
+       "            (0): Linear(in_features=512, out_features=256, bias=True)\n",
        "          )\n",
        "        )\n",
        "        (prop): Sequential(\n",
-       "          (0): Linear(in_features=640, out_features=512, bias=True)\n",
+       "          (0): Linear(in_features=768, out_features=768, bias=True)\n",
+       "          (1): ReLU()\n",
+       "          (2): Linear(in_features=768, out_features=512, bias=True)\n",
        "        )\n",
        "      )\n",
        "    )\n",
        "    (drop_out): Dropout(p=0.5, inplace=False)\n",
        "    (self_attn): ModuleList(\n",
-       "      (0): MultiHeadAttention(\n",
+       "      (0-1): 2 x MultiHeadAttention(\n",
        "        (attention): ScaledDotProductAttention(\n",
        "          (fc_q): Linear(in_features=512, out_features=512, bias=True)\n",
        "          (fc_k): Linear(in_features=512, out_features=512, bias=True)\n",
@@ -148,7 +150,7 @@
        "    (relu): ReLU()\n",
        "  )\n",
        "  (rel_predictor): PointNetRelClsMulti(\n",
-       "    (fc1): Linear(in_features=128, out_features=512, bias=True)\n",
+       "    (fc1): Linear(in_features=256, out_features=512, bias=True)\n",
        "    (fc2): Linear(in_features=512, out_features=256, bias=True)\n",
        "    (fc3): Linear(in_features=256, out_features=26, bias=True)\n",
        "    (dropout): Dropout(p=0.3, inplace=False)\n",
@@ -192,23 +194,52 @@
      "text": [
       "각 서브모듈의 파라미터 수:\n",
       "obj_encoder: 73,592\n",
-      "rel_encoder: 25,600\n",
-      "gcn: 1,881,640\n",
+      "rel_encoder: 42,112\n",
+      "gcn: 5,673,800\n",
       "obj_predictor: 435,104\n",
-      "rel_predictor: 204,058\n",
-      "총 파라미터 수: 2,619,994\n"
+      "rel_predictor: 269,594\n",
+      "총 파라미터 수: 6,494,202\n"
      ]
     }
    ],
    "source": [
-    "submodule_params = get_submodule_parameters(model.model.gcn)\n",
+    "submodule_params = get_submodule_parameters(model.model)\n",
     "\n",
     "print(\"각 서브모듈의 파라미터 수:\")\n",
     "for name, params in submodule_params.items():\n",
     "    print(f\"{name}: {params:,}\")\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# 전체 파라미터 수 계산 및 출력\n",
-    "total_params = count_parameters(model.model.gcn)\n",
+    "total_params = count_parameters(model.model)\n",
     "print(f\"총 파라미터 수: {total_params:,}\")"
    ]
   },
