--- a/pruning_test.ipynb
+++ b/pruning_test.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "def load_config():\n",
     "    # load config file\n",
-    "    config = Config(\"./config/mmgnet.json\")\n",
+    "    config = Config(\"./config/SGFN.json\")\n",
     "    #print(config)\n",
     "    config.MODE = 'train'\n",
     "    config.exp = 'test'\n",
