--- a/pruning_test.ipynb
+++ b/pruning_test.ipynb
@@ -30,13 +30,13 @@
    "source": [
     "def load_config():\n",
     "    # load config file\n",
-    "    config = Config(\"./config/attn_SGFN.json\")\n",
+    "    config = Config(\"./config/SGGpoint.json\")\n",
     "    #print(config)\n",
     "    config.MODE = 'train'\n",
     "    config.exp = 'test'\n",
-    "    config.NAME = 'sgfn'\n",
-    "    config.pruning.st_pruning_ratio = 0.5\n",
-    "    config.pruning_method = \"st\"\n",
+    "    config.NAME = 'SGGpoint'\n",
+    "    #config.pruning.st_pruning_ratio = 0.5\n",
+    "    #config.pruning_method = \"st\"\n",
     "    \n",
     "    return config"
    ]
@@ -50,32 +50,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model name : sgfn\n",
+      "model name : SGGpoint\n",
       "num of data: 3845\n",
       "num of data: 548\n",
-      "path: x/obj_encoder_best.pth result: False\n",
-      "path: x/rel_encoder_best.pth result: False\n",
-      "path: x/gcn_best.pth result: False\n",
-      "path: x/obj_predictor_best.pth result: False\n",
-      "path: x/rel_predictor_best.pth result: False\n",
+      "path: x/backbone_best.pth result: False\n",
+      "path: x/edge_mlp_best.pth result: False\n",
+      "path: x/edge_gcn_best.pth result: False\n",
+      "path: x/obj_mlp_best.pth result: False\n",
+      "path: x/rel_mlp_best.pth result: False\n",
+      "path: x/obj_classifier_best.pth result: False\n",
+      "path: x/rel_classifier_best.pth result: False\n",
       "\tmodel loading failed!\n",
       "\n",
-      "load pretrain model: x\n",
-      "=== sgfn (GCN) Structured Pruning   ===\n",
-      "[Sequential(\n",
-      "  (0): Linear(in_features=256, out_features=256, bias=True)\n",
-      "), Sequential(\n",
-      "  (0): Linear(in_features=512, out_features=256, bias=True)\n",
-      "), Linear(in_features=768, out_features=256, bias=True)]\n",
-      "gcn_3d[0]_base_ops: 13881145.107692307, gcn_3d[0]_origin_params_count: 2637184\n",
-      "ignored layers:  [Sequential(\n",
-      "  (0): Linear(in_features=256, out_features=256, bias=True)\n",
-      "), Sequential(\n",
-      "  (0): Linear(in_features=512, out_features=256, bias=True)\n",
-      "), Linear(in_features=768, out_features=256, bias=True), Linear(in_features=512, out_features=512, bias=True), Linear(in_features=768, out_features=512, bias=True)]\n",
-      "prune :gconvs[0]\n",
-      "en_current_speed_up: 2.020166051204956, pruned_ratio: 0.5004576851672087\n",
-      "\n"
+      "load pretrain model: x\n"
      ]
     }
    ],
@@ -87,7 +74,7 @@
     "# if config.VERBOSE:\n",
     "#     print(config)\n",
     "model = MMGNet(config)\n",
-    "model.gcn_pruning()\n"
+    "#model.gcn_pruning()\n"
    ]
   },
   {
@@ -98,37 +85,71 @@
     {
      "data": {
       "text/plain": [
-       "ModuleList(\n",
-       "  (0): GraphEdgeAttenNetwork(\n",
-       "    (index_get): Gen_Index()\n",
-       "    (index_aggr): Aggre_Index()\n",
-       "    (edgeatten): MultiHeadedEdgeAttention(\n",
-       "      (nn_edge): Sequential(\n",
-       "        (0): Linear(in_features=1280, out_features=264, bias=True)\n",
-       "        (1): ReLU()\n",
-       "        (2): Linear(in_features=264, out_features=256, bias=True)\n",
+       "SGGpoint(\n",
+       "  (backbone): Sequential(\n",
+       "    (0): DGCNN(\n",
+       "      (conv1): Sequential(\n",
+       "        (0): Conv2d(6, 64, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (2): LeakyReLU(negative_slope=0.2)\n",
        "      )\n",
-       "      (nn): mySequential(\n",
-       "        (0): Conv1d(96, 1, kernel_size=(1,), stride=(1,))\n",
-       "        (1): ReLU()\n",
-       "        (2): Dropout(p=0.5, inplace=False)\n",
-       "        (3): Conv1d(1, 32, kernel_size=(1,), stride=(1,))\n",
+       "      (conv2): Sequential(\n",
+       "        (0): Conv2d(128, 64, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (2): LeakyReLU(negative_slope=0.2)\n",
        "      )\n",
-       "      (proj_edge): Sequential(\n",
-       "        (0): Linear(in_features=256, out_features=256, bias=True)\n",
+       "      (conv3): Sequential(\n",
+       "        (0): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (2): LeakyReLU(negative_slope=0.2)\n",
        "      )\n",
-       "      (proj_query): Sequential(\n",
-       "        (0): Linear(in_features=512, out_features=512, bias=True)\n",
+       "      (conv4): Sequential(\n",
+       "        (0): Conv2d(256, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (2): LeakyReLU(negative_slope=0.2)\n",
        "      )\n",
-       "      (proj_value): Sequential(\n",
-       "        (0): Linear(in_features=512, out_features=256, bias=True)\n",
+       "      (conv5): Sequential(\n",
+       "        (0): Conv1d(512, 248, kernel_size=(1,), stride=(1,), bias=False)\n",
+       "        (1): BatchNorm1d(248, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (2): LeakyReLU(negative_slope=0.2)\n",
        "      )\n",
        "    )\n",
-       "    (prop): Sequential(\n",
-       "      (0): Linear(in_features=768, out_features=352, bias=True)\n",
+       "  )\n",
+       "  (edge_mlp): Linear(in_features=512, out_features=501, bias=True)\n",
+       "  (edge_gcn): EdgeGCN(\n",
+       "    (node_GConv1): GCNConv(256, 128)\n",
+       "    (node_GConv2): GCNConv(128, 256)\n",
+       "    (edge_MLP1): Sequential(\n",
+       "      (0): Conv1d(512, 256, kernel_size=(1,), stride=(1,))\n",
        "      (1): ReLU()\n",
-       "      (2): Linear(in_features=352, out_features=512, bias=True)\n",
        "    )\n",
+       "    (edge_MLP2): Sequential(\n",
+       "      (0): Conv1d(256, 512, kernel_size=(1,), stride=(1,))\n",
+       "      (1): ReLU()\n",
+       "    )\n",
+       "    (edge_attentionND): Linear(in_features=512, out_features=128, bias=True)\n",
+       "    (node_attentionND): Linear(in_features=256, out_features=256, bias=True)\n",
+       "    (node_indicator_reduction): Linear(in_features=512, out_features=256, bias=True)\n",
+       "  )\n",
+       "  (obj_mlp): Linear(in_features=512, out_features=256, bias=True)\n",
+       "  (rel_mlp): Linear(in_features=1024, out_features=512, bias=True)\n",
+       "  (obj_classifier): NodeMLP(\n",
+       "    (node_linear1): Linear(in_features=256, out_features=128, bias=False)\n",
+       "    (node_BnReluDp): Sequential(\n",
+       "      (0): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (1): LeakyReLU(negative_slope=0.2)\n",
+       "      (2): Dropout(p=0.5, inplace=False)\n",
+       "    )\n",
+       "    (node_linear2): Linear(in_features=128, out_features=160, bias=False)\n",
+       "  )\n",
+       "  (rel_classifier): EdgeMLP(\n",
+       "    (edge_linear1): Linear(in_features=512, out_features=256, bias=False)\n",
+       "    (edge_BnReluDp): Sequential(\n",
+       "      (0): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (1): LeakyReLU(negative_slope=0.2)\n",
+       "      (2): Dropout(p=0.5, inplace=False)\n",
+       "    )\n",
+       "    (edge_linear2): Linear(in_features=256, out_features=26, bias=False)\n",
        "  )\n",
        ")"
       ]
@@ -139,7 +160,7 @@
     }
    ],
    "source": [
-    "model.model.gcn.gconvs"
+    "model.model"
    ]
   },
   {
@@ -177,13 +198,13 @@
     }
    ],
    "source": [
-    "submodule_params = get_submodule_parameters(model.model.gcn.gconvs[0].edgeatten)\n",
+    "submodule_params = get_submodule_parameters(model.model)\n",
     "\n",
     "print(\"각 서브모듈의 파라미터 수:\")\n",
     "for name, params in submodule_params.items():\n",
     "    print(f\"{name}: {params:,}\")\n",
     "# 전체 파라미터 수 계산 및 출력\n",
-    "total_params = count_parameters(model.model.gcn.gconvs[0].edgeatten)\n",
+    "total_params = count_parameters(model.model)\n",
     "print(f\"총 파라미터 수: {total_params:,}\")"
    ]
   },
