Add VL-SAT result

--- a/visualization/visualization.ipynb
+++ b/visualization/visualization.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,8 +191,8 @@
     }
    ],
    "source": [
-    "title = 'SGPN Structured, Unstructured Pruning Performance'\n",
-    "base_path_structured = '/home/knuvki/Desktop/song/VLSAT_pruning/config/results/sgpn/eval_sgpn_st'  # 여기에 실제 구조화된 폴더 경로를 넣으세요\n",
+    "title = 'VL-SAT Structured, Unstructured Pruning Performance'\n",
+    "base_path_structured = '/home/knuvi/Desktop/song/lightweight_3DSSG/config/results/Mmgnet/eval_mmg_st'  # 여기에 실제 구조화된 폴더 경로를 넣으세요\n",
     "base_path_unstructured = '/home/knuvki/Desktop/song/VLSAT_pruning/config/results/sgpn/eval_sgpn_unst'  # 여기에 실제 비구조화된 폴더 경로를 넣으세요\n",
     "\n",
     "structured_results = process_folders(base_path_structured, structured=True)\n",
