--- a/size_test/vlsat_size.ipynb
+++ b/size_test/vlsat_size.ipynb
@@ -9,12 +9,14 @@
     "from genericpath import isfile\n",
     "import json\n",
     "import os\n",
+    "\n",
     "if __name__ == '__main__':\n",
+    "    current_dir = os.path.dirname(os.path.abspath(\"/home/knuvi/Desktop/song/lightweight_3DSSG/size_test\"))\n",
+    "    os.sys.path.append(current_dir)\n",
+    "    os.sys.path.append(os.path.join(current_dir, './src'))\n",
     "    #os.sys.path.append('./pytorch_geometric/torch_geometric')\n",
-    "    os.sys.path.append('./src')\n",
+    "   # os.sys.path.append('./src')\n",
     "from src.model.model import MMGNet\n",
-    "from src.model.SGFN_MMG.baseline_sgfn import SGFN\n",
-    "from src.model.SGFN_MMG.baseline_sgpn import SGPN\n",
     "from src.utils.config import Config\n",
     "from utils import util\n",
     "import torch\n",
@@ -26,40 +28,26 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_config():\n",
-    "    # load config file\n",
-    "    config = Config(\"./config/SGGpoint.json\")\n",
-    "    #print(config)\n",
-    "    config.MODE = 'train'\n",
-    "    config.exp = 'test'\n",
-    "    config.NAME = 'SGGpoint'\n",
-    "    #config.pruning.st_pruning_ratio = 0.5\n",
-    "    #config.pruning_method = \"st\"\n",
-    "    \n",
-    "    return config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model name : SGGpoint\n",
+      "model name : Mmgnet\n",
       "num of data: 3845\n",
       "num of data: 548\n",
-      "path: x/backbone_best.pth result: False\n",
-      "path: x/edge_mlp_best.pth result: False\n",
-      "path: x/edge_gcn_best.pth result: False\n",
-      "path: x/obj_mlp_best.pth result: False\n",
-      "path: x/rel_mlp_best.pth result: False\n",
-      "path: x/obj_classifier_best.pth result: False\n",
-      "path: x/rel_classifier_best.pth result: False\n",
+      "path: x/obj_encoder_best.pth result: False\n",
+      "path: x/rel_encoder_2d_best.pth result: False\n",
+      "path: x/rel_encoder_3d_best.pth result: False\n",
+      "path: x/mmg_best.pth result: False\n",
+      "path: x/triplet_projector_2d_best.pth result: False\n",
+      "path: x/clip_adapter_best.pth result: False\n",
+      "path: x/mlp_3d_best.pth result: False\n",
+      "path: x/rel_predictor_3d_best.pth result: False\n",
+      "path: x/rel_predictor_2d_best.pth result: False\n",
+      "path: x/clip_model_best.pth result: False\n",
+      "path: x/obj_predictor_2d_best.pth result: False\n",
+      "path: x/obj_predictor_3d_best.pth result: False\n",
       "\tmodel loading failed!\n",
       "\n",
       "load pretrain model: x\n"
@@ -67,6 +55,16 @@
     }
    ],
    "source": [
+    "def load_config():\n",
+    "    # load config file\n",
+    "    config = Config(\"../config/mmgnet.json\")\n",
+    "    #print(config)\n",
+    "    config.MODE = 'train'\n",
+    "    config.exp = 'test'\n",
+    "    #config.pruning.st_pruning_ratio = 0.5\n",
+    "    #config.pruning_method = \"st\"\n",
+    "    \n",
+    "    return config\n",
     "config = load_config()\n",
     "os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"0\"\n",
     "util.set_random_seed(config.SEED)\n",
@@ -79,93 +77,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SGGpoint(\n",
-       "  (backbone): Sequential(\n",
-       "    (0): DGCNN(\n",
-       "      (conv1): Sequential(\n",
-       "        (0): Conv2d(6, 64, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "        (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (2): LeakyReLU(negative_slope=0.2)\n",
+       "ModuleList(\n",
+       "  (0-1): 2 x GraphEdgeAttenNetwork(\n",
+       "    (index_get): Gen_Index()\n",
+       "    (index_aggr): Aggre_Index()\n",
+       "    (edgeatten): MultiHeadedEdgeAttention(\n",
+       "      (nn_edge): Sequential(\n",
+       "        (0): Linear(in_features=1536, out_features=1024, bias=True)\n",
+       "        (1): ReLU()\n",
+       "        (2): Linear(in_features=1024, out_features=512, bias=True)\n",
        "      )\n",
-       "      (conv2): Sequential(\n",
-       "        (0): Conv2d(128, 64, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "        (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (2): LeakyReLU(negative_slope=0.2)\n",
+       "      (nn): mySequential(\n",
+       "        (0): Conv1d(128, 128, kernel_size=(1,), stride=(1,))\n",
+       "        (1): ReLU()\n",
+       "        (2): Dropout(p=0.5, inplace=False)\n",
+       "        (3): Conv1d(128, 32, kernel_size=(1,), stride=(1,))\n",
        "      )\n",
-       "      (conv3): Sequential(\n",
-       "        (0): Conv2d(128, 128, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (2): LeakyReLU(negative_slope=0.2)\n",
+       "      (proj_edge): Sequential(\n",
+       "        (0): Linear(in_features=512, out_features=512, bias=True)\n",
        "      )\n",
-       "      (conv4): Sequential(\n",
-       "        (0): Conv2d(256, 256, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
-       "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (2): LeakyReLU(negative_slope=0.2)\n",
+       "      (proj_query): Sequential(\n",
+       "        (0): Linear(in_features=512, out_features=512, bias=True)\n",
        "      )\n",
-       "      (conv5): Sequential(\n",
-       "        (0): Conv1d(512, 248, kernel_size=(1,), stride=(1,), bias=False)\n",
-       "        (1): BatchNorm1d(248, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (2): LeakyReLU(negative_slope=0.2)\n",
+       "      (proj_value): Sequential(\n",
+       "        (0): Linear(in_features=512, out_features=256, bias=True)\n",
        "      )\n",
        "    )\n",
-       "  )\n",
-       "  (edge_mlp): Linear(in_features=512, out_features=501, bias=True)\n",
-       "  (edge_gcn): EdgeGCN(\n",
-       "    (node_GConv1): GCNConv(256, 128)\n",
-       "    (node_GConv2): GCNConv(128, 256)\n",
-       "    (edge_MLP1): Sequential(\n",
-       "      (0): Conv1d(512, 256, kernel_size=(1,), stride=(1,))\n",
+       "    (prop): Sequential(\n",
+       "      (0): Linear(in_features=768, out_features=768, bias=True)\n",
        "      (1): ReLU()\n",
+       "      (2): Linear(in_features=768, out_features=512, bias=True)\n",
        "    )\n",
-       "    (edge_MLP2): Sequential(\n",
-       "      (0): Conv1d(256, 512, kernel_size=(1,), stride=(1,))\n",
-       "      (1): ReLU()\n",
-       "    )\n",
-       "    (edge_attentionND): Linear(in_features=512, out_features=128, bias=True)\n",
-       "    (node_attentionND): Linear(in_features=256, out_features=256, bias=True)\n",
-       "    (node_indicator_reduction): Linear(in_features=512, out_features=256, bias=True)\n",
-       "  )\n",
-       "  (obj_mlp): Linear(in_features=512, out_features=256, bias=True)\n",
-       "  (rel_mlp): Linear(in_features=1024, out_features=512, bias=True)\n",
-       "  (obj_classifier): NodeMLP(\n",
-       "    (node_linear1): Linear(in_features=256, out_features=128, bias=False)\n",
-       "    (node_BnReluDp): Sequential(\n",
-       "      (0): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (1): LeakyReLU(negative_slope=0.2)\n",
-       "      (2): Dropout(p=0.5, inplace=False)\n",
-       "    )\n",
-       "    (node_linear2): Linear(in_features=128, out_features=160, bias=False)\n",
-       "  )\n",
-       "  (rel_classifier): EdgeMLP(\n",
-       "    (edge_linear1): Linear(in_features=512, out_features=256, bias=False)\n",
-       "    (edge_BnReluDp): Sequential(\n",
-       "      (0): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (1): LeakyReLU(negative_slope=0.2)\n",
-       "      (2): Dropout(p=0.5, inplace=False)\n",
-       "    )\n",
-       "    (edge_linear2): Linear(in_features=256, out_features=26, bias=False)\n",
        "  )\n",
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.model"
+    "model.model.mmg.gcn_3ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -188,12 +152,14 @@
      "output_type": "stream",
      "text": [
       "각 서브모듈의 파라미터 수:\n",
-      "nn_edge: 406,024\n",
-      "nn: 161\n",
-      "proj_edge: 65,792\n",
-      "proj_query: 262,656\n",
-      "proj_value: 131,328\n",
-      "총 파라미터 수: 865,961\n"
+      "self_attn: 2,103,296\n",
+      "cross_attn: 2,103,296\n",
+      "cross_attn_rel: 2,103,296\n",
+      "gcn_2ds: 7,520,576\n",
+      "gcn_3ds: 7,520,576\n",
+      "self_attn_fc: 1,608\n",
+      "drop_out: 0\n",
+      "총 파라미터 수: 21,352,648\n"
      ]
     }
    ],
