Add size test code

--- a/size_test/vlsat_size.ipynb
+++ b/size_test/vlsat_size.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -152,14 +152,19 @@
      "output_type": "stream",
      "text": [
       "각 서브모듈의 파라미터 수:\n",
-      "self_attn: 2,103,296\n",
-      "cross_attn: 2,103,296\n",
-      "cross_attn_rel: 2,103,296\n",
-      "gcn_2ds: 7,520,576\n",
-      "gcn_3ds: 7,520,576\n",
-      "self_attn_fc: 1,608\n",
-      "drop_out: 0\n",
-      "총 파라미터 수: 21,352,648\n"
+      "obj_encoder: 107,648\n",
+      "rel_encoder_2d: 75,136\n",
+      "rel_encoder_3d: 75,136\n",
+      "mmg: 21,352,648\n",
+      "triplet_projector_2d: 2,098,688\n",
+      "clip_adapter: 0\n",
+      "mlp_3d: 388,584\n",
+      "rel_predictor_3d: 400,666\n",
+      "rel_predictor_2d: 400,666\n",
+      "clip_model: 0\n",
+      "obj_predictor_2d: 82,080\n",
+      "obj_predictor_3d: 82,080\n",
+      "총 파라미터 수: 25,063,333\n"
      ]
     }
    ],
