--- a/visualization/visualization_SGPN.ipynb
+++ b/visualization/visualization_SGPN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,23 +270,18 @@
     }
    ],
    "source": [
-    "title = 'VL-SAT Structured, Unstructured Pruning Performance'\n",
-    "base_path_structured = '/home/knuvi/Desktop/song/lightweight_3DSSG/config/results/Mmgnet/eval_mmg_st'  # 여기에 실제 구조화된 폴더 경로를 넣으세요\n",
-    "base_path_unstructured = '/home/knuvi/Desktop/song/lightweight_3DSSG/config/results/Mmgnet/eval_mmg_unst'  # 여기에 실제 비구조화된 폴더 경로를 넣으세요\n",
+    "title = 'SGPN Structured, Unstructured Pruning Performance'\n",
+    "base_path_structured = '/home/knuvki/Desktop/song/VLSAT_pruning/config/results/sgpn/eval_sgpn_st'  # 여기에 실제 구조화된 폴더 경로를 넣으세요\n",
+    "base_path_unstructured = '/home/knuvki/Desktop/song/VLSAT_pruning/config/results/sgpn/eval_sgpn_unst'  # 여기에 실제 비구조화된 폴더 경로를 넣으세요\n",
     "\n",
     "structured_results = process_folders(base_path_structured, structured=True)\n",
     "unstructured_results = process_folders(base_path_unstructured, structured=False)    \n",
     "# 추가 학습 후 결과 직접 입력 (구조화된 및 비구조화된)\n",
     "additional_structured_results = [\n",
-    "    (0.25, 55.76, 89.79, 89.79),  # (Pruning Ratio, 3d triplet Acc@50)\n",
-    "    (0.50, 55.51, 88.07, 89.31),\n",
-    "    (0.75, 53.93, 80.18, 86.66),\n",
-    "    (0.75, 53.97, 79.03, 86.89)\n",
+    "    (0.25, 52.37, 82.93, 87.32),  # (Pruning Ratio, 3d triplet Acc@50)\n",
     "]\n",
     "additional_unstructured_results = [\n",
-    "    (0.25, 54.75, 90, 89.74),  # (Pruning Ratio, 3d triplet Acc@50)\n",
-    "    (0.50, 54.75, 89.75, 89.6),\n",
-    "    (0.75, 55.28, 89.64, 89.8)\n",
+    "    (0.75, 52.3, 82.41, 87.06)\n",
     "]\n",
     "\n",
     "for ratio, obj_acc_1, rel_acc_1, triplet_acc_50, _ in structured_results:\n",
