--- a/calc_score.ipynb
+++ b/calc_score.ipynb
@@ -183,11 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def display_scores(models_data, weights=(1, 2, 5), scaling_factor=1.0, mu=0.1):\n",
+    "def display_scores(models_data, weights=(1, 2, 5), scaling_factor=3.0, mu=5):\n",
     "    results = {}\n",
     "    for model_name, data in models_data.items():\n",
     "        baseline = data[\"baseline\"]\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -228,76 +228,76 @@
      "output_type": "stream",
      "text": [
       "Scores for SGPN:\n",
-      "  Pruning Ratio 0.05, Score: 0.260\n",
-      "  Pruning Ratio 0.1, Score: 0.545\n",
-      "  Pruning Ratio 0.15, Score: 0.864\n",
-      "  Pruning Ratio 0.2, Score: 1.142\n",
-      "  Pruning Ratio 0.25, Score: 1.456\n",
-      "  Pruning Ratio 0.3, Score: 1.880\n",
-      "  Pruning Ratio 0.35, Score: 2.340\n",
-      "  Pruning Ratio 0.4, Score: 3.159\n",
-      "  Pruning Ratio 0.45, Score: 3.232\n",
-      "  Pruning Ratio 0.5, Score: 3.694\n",
-      "  Pruning Ratio 0.55, Score: 4.796\n",
-      "  Pruning Ratio 0.6, Score: 4.777\n",
-      "  Pruning Ratio 0.65, Score: 4.437\n",
-      "  Pruning Ratio 0.7, Score: 4.862\n",
-      "  Pruning Ratio 0.75, Score: 5.099\n",
-      "Best Pruning Ratio: 0.05, Lowest Score: 0.260\n",
+      "  Pruning Ratio 0.05, Score: 0.015\n",
+      "  Pruning Ratio 0.1, Score: 0.055\n",
+      "  Pruning Ratio 0.15, Score: 0.129\n",
+      "  Pruning Ratio 0.2, Score: 0.162\n",
+      "  Pruning Ratio 0.25, Score: 0.231\n",
+      "  Pruning Ratio 0.3, Score: 0.410\n",
+      "  Pruning Ratio 0.35, Score: 0.625\n",
+      "  Pruning Ratio 0.4, Score: 1.199\n",
+      "  Pruning Ratio 0.45, Score: 1.027\n",
+      "  Pruning Ratio 0.5, Score: 1.244\n",
+      "  Pruning Ratio 0.55, Score: 2.101\n",
+      "  Pruning Ratio 0.6, Score: 1.837\n",
+      "  Pruning Ratio 0.65, Score: 1.252\n",
+      "  Pruning Ratio 0.7, Score: 1.432\n",
+      "  Pruning Ratio 0.75, Score: 1.424\n",
+      "Best Pruning Ratio: 0.55, Highest Score: 2.101\n",
       "\n",
       "Scores for SGFN:\n",
-      "  Pruning Ratio 0.05, Score: 0.252\n",
-      "  Pruning Ratio 0.1, Score: 0.502\n",
-      "  Pruning Ratio 0.15, Score: 0.752\n",
-      "  Pruning Ratio 0.2, Score: 1.004\n",
-      "  Pruning Ratio 0.25, Score: 1.253\n",
-      "  Pruning Ratio 0.3, Score: 1.505\n",
-      "  Pruning Ratio 0.35, Score: 1.762\n",
-      "  Pruning Ratio 0.4, Score: 2.013\n",
-      "  Pruning Ratio 0.45, Score: 2.268\n",
-      "  Pruning Ratio 0.5, Score: 2.535\n",
-      "  Pruning Ratio 0.55, Score: 2.818\n",
-      "  Pruning Ratio 0.6, Score: 3.096\n",
-      "  Pruning Ratio 0.65, Score: 3.398\n",
-      "  Pruning Ratio 0.7, Score: 3.813\n",
-      "  Pruning Ratio 0.75, Score: 4.264\n",
-      "Best Pruning Ratio: 0.05, Lowest Score: 0.252\n",
+      "  Pruning Ratio 0.05, Score: 0.007\n",
+      "  Pruning Ratio 0.1, Score: 0.012\n",
+      "  Pruning Ratio 0.15, Score: 0.017\n",
+      "  Pruning Ratio 0.2, Score: 0.024\n",
+      "  Pruning Ratio 0.25, Score: 0.028\n",
+      "  Pruning Ratio 0.3, Score: 0.035\n",
+      "  Pruning Ratio 0.35, Score: 0.047\n",
+      "  Pruning Ratio 0.4, Score: 0.053\n",
+      "  Pruning Ratio 0.45, Score: 0.063\n",
+      "  Pruning Ratio 0.5, Score: 0.085\n",
+      "  Pruning Ratio 0.55, Score: 0.123\n",
+      "  Pruning Ratio 0.6, Score: 0.156\n",
+      "  Pruning Ratio 0.65, Score: 0.213\n",
+      "  Pruning Ratio 0.7, Score: 0.383\n",
+      "  Pruning Ratio 0.75, Score: 0.589\n",
+      "Best Pruning Ratio: 0.75, Highest Score: 0.589\n",
       "\n",
       "Scores for Attn + SGFN:\n",
-      "  Pruning Ratio 0.05, Score: 0.251\n",
-      "  Pruning Ratio 0.1, Score: 0.503\n",
-      "  Pruning Ratio 0.15, Score: 0.759\n",
-      "  Pruning Ratio 0.2, Score: 1.009\n",
-      "  Pruning Ratio 0.25, Score: 1.262\n",
-      "  Pruning Ratio 0.3, Score: 1.548\n",
-      "  Pruning Ratio 0.35, Score: 1.796\n",
-      "  Pruning Ratio 0.4, Score: 2.082\n",
-      "  Pruning Ratio 0.45, Score: 2.375\n",
-      "  Pruning Ratio 0.5, Score: 2.680\n",
-      "  Pruning Ratio 0.55, Score: 2.981\n",
-      "  Pruning Ratio 0.6, Score: 3.414\n",
-      "  Pruning Ratio 0.65, Score: 3.783\n",
-      "  Pruning Ratio 0.7, Score: 4.053\n",
-      "  Pruning Ratio 0.75, Score: 4.784\n",
-      "Best Pruning Ratio: 0.05, Lowest Score: 0.251\n",
+      "  Pruning Ratio 0.05, Score: 0.006\n",
+      "  Pruning Ratio 0.1, Score: 0.013\n",
+      "  Pruning Ratio 0.15, Score: 0.024\n",
+      "  Pruning Ratio 0.2, Score: 0.029\n",
+      "  Pruning Ratio 0.25, Score: 0.037\n",
+      "  Pruning Ratio 0.3, Score: 0.078\n",
+      "  Pruning Ratio 0.35, Score: 0.081\n",
+      "  Pruning Ratio 0.4, Score: 0.122\n",
+      "  Pruning Ratio 0.45, Score: 0.170\n",
+      "  Pruning Ratio 0.5, Score: 0.230\n",
+      "  Pruning Ratio 0.55, Score: 0.286\n",
+      "  Pruning Ratio 0.6, Score: 0.474\n",
+      "  Pruning Ratio 0.65, Score: 0.598\n",
+      "  Pruning Ratio 0.7, Score: 0.623\n",
+      "  Pruning Ratio 0.75, Score: 1.109\n",
+      "Best Pruning Ratio: 0.75, Highest Score: 1.109\n",
       "\n",
       "Scores for VLSAT:\n",
-      "  Pruning Ratio 0.05, Score: 0.253\n",
-      "  Pruning Ratio 0.1, Score: 0.503\n",
-      "  Pruning Ratio 0.15, Score: 0.756\n",
-      "  Pruning Ratio 0.2, Score: 1.006\n",
-      "  Pruning Ratio 0.25, Score: 1.257\n",
-      "  Pruning Ratio 0.3, Score: 1.516\n",
-      "  Pruning Ratio 0.35, Score: 1.763\n",
-      "  Pruning Ratio 0.4, Score: 2.015\n",
-      "  Pruning Ratio 0.45, Score: 2.271\n",
-      "  Pruning Ratio 0.5, Score: 2.540\n",
-      "  Pruning Ratio 0.55, Score: 2.818\n",
-      "  Pruning Ratio 0.6, Score: 3.092\n",
-      "  Pruning Ratio 0.65, Score: 3.401\n",
-      "  Pruning Ratio 0.7, Score: 3.880\n",
-      "  Pruning Ratio 0.75, Score: 4.223\n",
-      "Best Pruning Ratio: 0.05, Lowest Score: 0.253\n",
+      "  Pruning Ratio 0.05, Score: 0.008\n",
+      "  Pruning Ratio 0.1, Score: 0.013\n",
+      "  Pruning Ratio 0.15, Score: 0.021\n",
+      "  Pruning Ratio 0.2, Score: 0.026\n",
+      "  Pruning Ratio 0.25, Score: 0.032\n",
+      "  Pruning Ratio 0.3, Score: 0.046\n",
+      "  Pruning Ratio 0.35, Score: 0.048\n",
+      "  Pruning Ratio 0.4, Score: 0.055\n",
+      "  Pruning Ratio 0.45, Score: 0.066\n",
+      "  Pruning Ratio 0.5, Score: 0.090\n",
+      "  Pruning Ratio 0.55, Score: 0.123\n",
+      "  Pruning Ratio 0.6, Score: 0.152\n",
+      "  Pruning Ratio 0.65, Score: 0.216\n",
+      "  Pruning Ratio 0.7, Score: 0.450\n",
+      "  Pruning Ratio 0.75, Score: 0.548\n",
+      "Best Pruning Ratio: 0.75, Highest Score: 0.548\n",
       "\n"
      ]
     }
